fix: responsive headings and spacing

--- a/components/AudioPlayer/AudioPlayer.module.scss
+++ b/components/AudioPlayer/AudioPlayer.module.scss
@@ -61,7 +61,8 @@
 }
 
 .title {
-    font-size: var(--typography-size-200);
+    font-size: var(--typography-size-h5);
+    line-height: var(--typography-line-height-heading-sm);
 }
 
 .waveformWrapper {
