--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -11,7 +11,7 @@
 }
 
 .prose.flow > * + * {
-    margin-block-start: var(--flow-space, 1em);
+    margin-block-start: var(--flow-space, var(--space-scale-100));
 }
 
 .prose p + :is(h2, h3) {
@@ -77,7 +77,7 @@ h6 {
 }
 
 p {
-    margin-block: 0 var(--space-scale-100);
+    margin: 0;
 }
 
 .text-small {
@@ -96,7 +96,7 @@ ol {
     margin-block: 0 var(--space-scale-100);
 }
 
-li + li {
+.prose li + li {
     margin-block-start: var(--space-scale-050);
 }
 
